# codesensei

./: .env.example  .gitignore  CLAUDE.md  README.md  _bootstrap_prompt.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_enable_pgvector.py  002_app_settings.py  003_repos_chunks.py  004_review_history.py  005_review_run_tokens.py  006_repos_codesensei_ignore.py  007_rename_repos_to_repositories.py
backend/src/codesensei/: __init__.py  config.py  db.py  healthcheck.py  logging_config.py  main.py  redis_client.py
backend/tests/: conftest.py
backend/tests/integration/: test_healthz_endpoint.py  test_healthz_providers.py  test_healthz_worker.py  test_jobs_endpoint.py  test_jobs_stream_ws.py  test_review_endpoint.py  test_review_post_endpoint.py  test_review_with_temporal.py  test_reviews_history_endpoint.py  test_settings_endpoint.py  test_settings_test_github_endpoint.py
backend/tests/unit/: conftest.py  test_anthropic_adapter.py  test_ast_chunker.py  test_codesensei_ignore.py  test_git_temporal.py  test_github_diff.py  test_github_posting.py  test_healthcheck_logic.py  test_indexing_aggregates.py  test_indexing_chunker.py  test_indexing_service.py  test_jobs_stream_publisher.py  test_master_key_resolution.py  test_ollama_adapter.py  test_openai_adapter.py  test_posting_mapper.py  test_posting_pr_url_parse.py  test_prompt_temporal.py  test_provider_errors.py  test_provider_factory.py  test_provider_probe.py  test_provider_usage.py  test_retrieval.py  test_review_parser.py  (+9 more)
(+245 files in other folders)
